--- a/source/_posts/20190706_极简欧洲史.md
+++ b/source/_posts/20190706_极简欧洲史.md
@@ -1,9 +1,7 @@
 ---
 title: 极简欧洲史[书语者精品电子书] (约翰•赫斯特)
 category: 读书
-tag: 欧洲历史
-type: tags
-layout: "tags"
+tag: 欧洲历史 历史
 ---
 
 # 极简欧洲史[书语者精品电子书] (约翰•赫斯特)
