--- a/source/_posts/2019/12/20190706_美丽新世界.md
+++ b/source/_posts/2019/12/20190706_美丽新世界.md
@@ -1,7 +1,11 @@
 ---
 title: 重返美丽新世界 (阿道司·赫胥黎)
-category: 读书
-tag: 乌托邦,读书
+catalog: true
+toc_nav_num: true
+category: reading
+tags: 
+- 乌托邦
+- 社会学
 ---
 
 # 重返美丽新世界 (阿道司·赫胥黎)
